Update function.html Changelog: RanRun

--- a/function.html
+++ b/function.html
@@ -779,15 +779,15 @@
       <h3>
         <span class="material-symbols-rounded">campaign</span>최신 업데이트
         <span
-          style="margin-left:auto; font-size:12px; background:var(--primary); color:white; padding:4px 8px; border-radius:12px;">2025.12.29</span>
+          style="margin-left:auto; font-size:12px; background:var(--primary); color:white; padding:4px 8px; border-radius:12px;">2026.01.12</span>
       </h3>
       <div class="divider"></div>
       <ul class="list">
         <li style="line-height:1.6">
-          <b>/오목 (오목 게임) 추가!</b> ⚫⚪<br>
-          <span class="muted">실시간 대전 오목 게임이 추가되었습니다. 친구들과 함께 즐겨보세요!</span>
-          <a href="omok.html"
-            style="display:inline-block; margin-top:6px; background:var(--primary); color:white; padding:6px 12px; border-radius:8px; text-decoration:none; font-size:13px; font-weight:700;">오목
+          <b>/란런 (달리기 게임) 추가!</b> 🏃‍♀️💨<br>
+          <span class="muted">점프와 슬라이드! 장애물을 피하고 젤리를 먹으면서 최고 기록에 도전하세요!</span>
+          <a href="run.html"
+            style="display:inline-block; margin-top:6px; background:var(--primary); color:white; padding:6px 12px; border-radius:8px; text-decoration:none; font-size:13px; font-weight:700;">란런
             하러가기 →</a>
         </li>
       </ul>
