Fix game over modal not closing on restart in run.html

--- a/run.html
+++ b/run.html
@@ -353,6 +353,8 @@
         function resetGame() {
             if (loopId) cancelAnimationFrame(loopId);
 
+            document.getElementById('game-over').style.display = 'none';
+
             isRunning = true;
             isPaused = false;
             score = 0;
