Enable vertical scrolling on leaderboards by setting touch-action: pan-y

--- a/run.html
+++ b/run.html
@@ -98,6 +98,7 @@
             max-height: 200px;
             overflow-y: auto;
             font-size: 16px;
+            touch-action: pan-y;
         }
 
         .rank-item {
@@ -210,6 +211,7 @@
             max-height: 150px; overflow-y: auto; 
             font-size: 14px; margin-bottom: 20px;
             box-sizing: border-box;
+            touch-action: pan-y;
         ">
             <div style="text-align:center; color:#ddd;">순위 로딩 중...</div>
         </div>
